Fix problems with non-default browser styles, add a dark mode.

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -30,6 +30,7 @@ body {
 
 main {
 	background-color: #f2f2EC; //rgba(255,255,255,0.9);
+	color: black;
 	margin: 0 auto;
 	padding: 0.5em 1em 1em 1em;
 	max-width: $main_width;
